--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
 
     //view注解
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    // Material Design EditText
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
 
