--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
-
+    compile 'com.android.support:design:24.1.1'
     //retrofit和rxjava
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
     compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
@@ -30,11 +30,14 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
-
     //view注解
     compile 'com.jakewharton:butterknife:7.0.1'
-
     // Material Design EditText
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    // Tab Layout
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.0.8@aar'
+    // 图片显示
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile project(':pulltorefreshrecyclerview')
 }
 
